--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   font-family: all;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -545,10 +546,110 @@ header button[aria-expanded="true"] span::after {
   line-height: 1.5;
 }
 
-@media (max-width: 850px) {
+/* End project section */
+
+/* Start button up */
+.up-button {
+  display: flex;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  z-index: 300;
+  border: 4px solid black;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
-/* End project section */
+.up-button i {
+  font-size: 1.2rem;
+  color: black;
+}
+/* End button up */
+
+/* Start vision section */
+.our-vision {
+  padding: 20px;
+  background-color: var(--main-color);
+}
+
+.our-vision .container ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+}
+
+.our-vision .container ul li img {
+  width: 100%;
+}
+/* End vision section */
+
+/* Start about section in index page */
+
+.about-us-section {
+  padding: 80px 0;
+  overflow: hidden;
+}
+
+.about-us-section .content {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+
+@media (max-width: 790px) {
+  .about-us-section .content {
+    flex-direction: column;
+  }
+}
+
+.about-us-section .content .left,
+.about-us-section .content .right {
+  width: 45%;
+  flex-grow: 1;
+}
+
+@media (max-width: 790px) {
+  .about-us-section .content .left,
+  .about-us-section .content .right {
+    width: 100%;
+    flex-grow: 1;
+  }
+}
+
+.about-us-section .content .right {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.about-us-section .content .right h4 {
+  font-size: 2.3rem;
+  line-height: 1;
+  margin-bottom: 30px;
+}
+
+.about-us-section .content .right p {
+  font-size: 0.8rem;
+}
+
+.about-us-section .content .right a {
+  padding: 10px 20px;
+  align-self: flex-start;
+  background-color: var(--main-color);
+  color: white;
+  margin-top: 10px;
+  text-transform: capitalize;
+}
+
+.about-us-section .content .left img {
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+}
+/* End about section in index page */
 
 /* Start explore section */
 
